[package]
name = "chain"
version = "0.1.0"
authors = ["aonemd <asalehmo7@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4"
sha2 = "0.10.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
log = "0.4.6"
pretty_env_logger = "0.4"
env_logger = "0.6.1"
ed25519-compact = { git = "https://github.com/jedisct1/rust-ed25519-compact", branch = "master", features = ["std", "pem"] }
